# mcp-atlassian

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml  smithery.yaml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker-publish.yml  lint.yml  stale.yml  tests.yml
scripts/: oauth_authorize.py  test_with_real_data.sh
src/mcp_atlassian/: __init__.py  config.py  confluence.py  document_types.py  exceptions.py  jira.py  preprocessing.py  server.py  utils.py
src/mcp_atlassian/confluence/: __init__.py  client.py  comments.py  config.py  constants.py  labels.py  pages.py  search.py  spaces.py  users.py  utils.py
src/mcp_atlassian/jira/: __init__.py  attachments.py  boards.py  client.py  comments.py  config.py  constants.py  epics.py  fields.py  formatting.py  issues.py  links.py  projects.py  protocols.py  search.py  sprints.py  transitions.py  users.py  utils.py  worklog.py
src/mcp_atlassian/models/: __init__.py  base.py  confluence.py  constants.py  jira.py
src/mcp_atlassian/models/confluence/: __init__.py  comment.py  common.py  label.py  page.py  search.py  space.py
src/mcp_atlassian/models/jira/: __init__.py  agile.py  changelog.py  comment.py  common.py  issue.py  link.py  project.py  search.py  workflow.py  worklog.py
src/mcp_atlassian/preprocessing/: __init__.py  base.py  confluence.py  jira.py  utils.py
src/mcp_atlassian/servers/: __init__.py  confluence.py  context.py  dependencies.py  jira.py  main.py
src/mcp_atlassian/utils/: __init__.py  date.py  dates.py  decorators.py  environment.py  io.py  logging.py  oauth.py  oauth_setup.py  ssl.py  tools.py  urls.py  validation.py
tests/: conftest.py  test_confluence.py  test_jira.py  test_preprocessing.py  test_real_api_validation.py  test_server.py
tests/fixtures/: confluence_mocks.py  jira_mocks.py
tests/integration/: conftest.py  test_proxy.py  test_ssl_verification.py
tests/unit/: test_server.py  test_utils.py
tests/unit/confluence/: __init__.py  conftest.py  test_client.py  test_client_oauth.py  test_comments.py  test_config.py  test_labels.py  test_pages.py  test_search.py  test_spaces.py  test_utils.py
tests/unit/jira/: conftest.py  test_attachments.py  test_boards.py  test_client.py  test_client_oauth.py  test_comments.py  test_config.py  test_epics.py  test_fields.py  test_formatting.py  test_issues.py  test_links.py  test_projects.py  test_search.py  test_sprints.py  test_transitions.py  test_users.py  test_worklog.py
tests/unit/models/: conftest.py  test_base_models.py  test_confluence_models.py  test_jira_models.py
tests/unit/servers/: test_confluence_server.py  test_jira_server.py  test_main_server.py
tests/unit/utils/: __init__.py  test_date.py  test_decorators.py  test_io.py  test_logging.py  test_masking.py  test_oauth.py  test_ssl.py  test_tools.py  test_urls.py
